# ai_invtool

./: .gitignore  README.md  pyproject.toml  run.ps1
archive/recovery_feb2026/: Income_Recovery_Strategy_Feb2026.md  README.md  execution_playbook.py  fig_put_analysis.py  fig_recovery_strategy.py  nvda_earnings_behavior.py  nvda_earnings_multidim.py  portfolio_optimizer_v2.py  portfolio_rebalance_plans.py  portfolio_recovery.py
invtool/: __main__.py  anomaly.py  charts.py  correlation.py  data.py  deep_research.py  display.py  forecast.py  main.py  options.py  portfolio.py  sentiment.py
src/invtool/: __init__.py  __main__.py  agent.py  config.py  earnings_ml.py  main.py  market_intel.py  montecarlo.py  optimizer.py  regime.py
src/invtool/agent/: __init__.py  chat.py  deep_research.py  handlers.py  loop.py  tools.py
src/invtool/ai/: __init__.py  earnings_ml.py
src/invtool/analysis/: __init__.py  earnings.py  execution.py  portfolio.py  technical.py
src/invtool/cli/: __init__.py  app.py  common.py
src/invtool/cli/menus/: __init__.py  ai.py  analytics.py  deep_research.py  earnings.py  execution.py  market_intel.py  options.py  portfolio.py  recovery.py  settings.py  technical.py  web_news.py
src/invtool/config/: __init__.py  settings.py
src/invtool/market/: __init__.py  webcrawler.py
src/invtool/ui/: __init__.py  prompt.py
